<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/warna4">

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/administrasi_sistem_jaringan"
        android:textSize="24sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/tulisan"/>

    <Button
        android:id="@+id/btn_silabus"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/silabus"
        android:textColor="@color/tulisan"
        android:background="@drawable/button_menu"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        />

    <Button
        android:id="@+id/btn_materi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/materi"
        android:textColor="@color/tulisan"
        android:background="@drawable/button_menu"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        />

    <Button
        android:id="@+id/btn_jobsheet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/jobsheet"
        android:textColor="@color/tulisan"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_menu"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:backgroundTint="@color/warna4"
        />

    <Button 
        android:id="@+id/btn_video_tutorial"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/video_tutorial"
        android:background="@drawable/button_menu"
        android:textColor="@color/tulisan"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:backgroundTint="@color/warna4"
        />

    <Button
        android:id="@+id/btn_latihan_soal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/latihan_soal"
        android:background="@drawable/button_menu"
        android:textColor="@color/tulisan"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:backgroundTint="@color/warna4"
        />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/about"
        android:textColor="@color/tulisan"
        android:background="@drawable/button_menu"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:backgroundTint="@color/warna4"
        />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        />

</LinearLayout>





















