<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/warna4"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="@dimen/_46sdp"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_silahkan_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silahkan_log_in_untuk_mulai_belajar"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"
        android:layout_marginTop="@dimen/_8sdp"
        android:textSize="@dimen/_11sdp"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_24sdp"
        android:hint="@string/username"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_52sdp"
        android:lines="1"
        android:autofillHints="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_24sdp"
        android:hint="@string/password"
        android:background="@drawable/edittext"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:lines="1"
        android:autofillHints="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:textColor="@color/merah_keras"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_46sdp"
        android:background="@drawable/button_menu"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_36sdp"
        android:text="@string/log_in" />


</LinearLayout>